# nucleo_microphone

./: CMakeLists.txt  LICENSE  README.md  setup_toolchain
board_driver/: CMakeLists.txt  adc.c  adc.h  backup_sram.c  backup_sram.h  can.c  can.h  crc.c  crc.h  flash.c  flash.h  gpio.c  gpio.h  i2c.c  i2c.h  init.c  init.h  interrupts.h  iwdg.c  iwdg.h  obdii.c  obdii.h  pwm.c  pwm.h  ringbuffer.h  rng.c  rng.h  rtc.c  rtc.h  spi.c  spi.h  uart.c  uart.h  updateRTC.c
board_driver/usb/: usb.c  usb.h  usbd_cdc_interface.c  usbd_cdc_interface.h  usbd_conf.c
libs/: CMakeLists.txt
libs/STM32F4xx_HAL_Driver/Inc/: stm32f4xx_hal_conf.h
libs/STM32_USB_Device_Library/: CMakeLists.txt
libs/STM32_USB_Device_Library/Class/CDC/Src/: usbd_cdc.c
nodes/: CMakeLists.txt  interrupts.c  ldscript.c  newlib_calls.c
nodes/examples/can/: CMakeLists.txt  main1.c  main2.c
nodes/examples/crc/: CMakeLists.txt  main.c
nodes/examples/iwdg/: CMakeLists.txt  main.c
nodes/examples/led/: CMakeLists.txt  main.c
nodes/examples/rng/: CMakeLists.txt  main.c
nodes/examples/rtc/: CMakeLists.txt  main.c
nodes/examples/uart/: CMakeLists.txt  main.c
nodes/examples/usb/: CMakeLists.txt  main.c
nodes/examples/xbee/: CMakeLists.txt  main.c
